syntax = "proto3";

option csharp_namespace = "Personal_blog";

import "Protos/google/api/annotations.proto";

package personalBlog;

service Blog {
  rpc create (ArticleCreate) returns (IdMassage){
    option (google.api.http) = {
      post: "/v1/article"
      body: "*"
    };
  };
  rpc edit (ArticleEdit) returns (Empty){
    option (google.api.http) = {
      put: "/v1/article/{id}"
      body: "*"
    };
  };
  rpc addFiles (stream FileChunk) returns (Empty) {
    option (google.api.http) = {
      put: "/v1/article/{id}/addFiles"
    };
  };
  rpc publish (IdMassage) returns (Empty) {
    option (google.api.http) = {
      put: "/v1/article/{id}/publish"
    };
  };
  rpc like (IdMassage) returns (Empty){
    option (google.api.http) = {
      put: "/v1/article/{id}/like"
    };
  };
  rpc delete (IdMassage) returns (Empty){
    option (google.api.http) = {
      delete: "/v1/article/{id}"
    };
  };
  rpc view (IdMassage) returns (ArticleInfo){
    option (google.api.http) = {
      get: "/v1/article/{id}"
    };
  };
  rpc getPagedList (PagedListQuery) returns (PagedListResult){
    option (google.api.http) = {
      get: "/v1/articles"
    };
  };
}

message IdMassage {
  int64 id = 1;
}

message PagedListQuery {
  int32 page = 1;
  int32 size = 2;
}

message PagedListResult {
  int32 page = 1;
  int32 size = 2;
  int32 totalPages = 3;
  int32 rowsCount = 4;
  repeated ArticleShort items = 5;
}

message ArticleCreate{
  string title = 1;
  string text = 2;
}

message ArticleEdit{
  int64 id = 1;
  string title = 2;
  string text = 3;
}

message ArticleShort {
  int64 id = 1;
  string title = 2;
  string text = 3;
  bool liked = 4;
  int64 likesCount = 5;
  int64 commentsCount = 6;
  bool isPublished = 7;
  int64 authorId = 8;
}

message ArticleInfo {
  int64 id = 1;
  string title = 2;
  string text = 3;
  bool isPublished = 4;
  repeated string mediaUrls = 5;
  bool liked = 6;
  int64 likesCount = 7;
  int64 commentsCount = 8;
  repeated Comment comments = 9;
  int64 authorId = 10;
}

message Comment {
  int64 authorId = 1;
  string authorName = 2;
  string authorAvatar = 3;
  string message = 4;
}

message FileChunk {
  int64 articleId = 1;
  int32 totalChunks = 2;
  bytes file = 3;
  string fileType = 4;
}

message Empty {}